--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   cached_network_image: ^2.0.0-rc.1
   auto_size_text: ^2.1.0
   flip_card: ^0.4.4
-  responsive_grid: ^1.1.1
+  random_string: ^2.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
