--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   auto_size_text: ^2.1.0
   flip_card: ^0.4.4
   random_string: ^2.0.1
+  universal_html: ^1.1.10
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
