--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flip_card: ^0.4.4
   random_string: ^2.0.1
   universal_html: ^1.1.10
+  responsive_builder:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
